--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ max-line-length = 150
 plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = "archetype.settings"
+django_settings_module = "mysite.settings"
