Add github workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ python = "^3.8"
 django = "^3.2"
 fastapi = "^0.70.0"
 pydantic = "^1.6.1"
-uvicorn = "^0.11.8"
+uvicorn = "^0.15.0"
+uvloop = {version = "^0.16.0", markers = 'sys_platform != "win32"'}
 whitenoise = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
