--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,22 @@
 [tool.poetry]
 name = "fastapi-django"
+package-mode = false
 version = "0.1.0"
+
 # doc
 authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
 description = "fastapi and django integration"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 
 # 3rd party
-django = "^4.2"
-fastapi = "^0.100.0"
+django = "^5.0"
+fastapi = "^0.110.1"
 pydantic = "^2.0.3"
-uvicorn = "^0.23.1"
-uvloop = {version = "^0.17.0", markers = 'sys_platform != "win32"'}
+uvicorn = "^0.29.0"
+uvloop = {version = "^0.19.0", markers = 'sys_platform != "win32"'}
 
 # optional
 psycopg2 = "^2.9.5"
@@ -22,11 +24,10 @@ psycopg2 = "^2.9.5"
 whitenoise = "^6.2.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.7"
 django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
-flake8 = {version = "^6.0.0", python = "^3.8.1"}
 ipython = "^8.14.0"
-mypy = "^1.4.1"
+mypy = "^1.7.0"
+ruff = "^0.3.5"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
