--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "python.formatting.provider": "black",
-  "python.linting.enabled": true,
-  "python.linting.flake8Enabled": true,
-  "editor.formatOnSave": true,
-  "python.linting.mypyEnabled": true
+  "editor.formatOnSave": true
 }
