--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,21 +13,21 @@ python = "^3.10"
 
 # 3rd party
 django = "^5.0"
-fastapi = "^0.110.1"
+fastapi = "^0.111.0"
 pydantic = "^2.0.3"
-uvicorn = "^0.29.0"
+uvicorn = "^0.30.0"
 uvloop = {version = "^0.19.0", markers = 'sys_platform != "win32"'}
 
 # optional
-psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.9.5"
 # you don't need whitenoise if you mount the django APP with FastAPI
 whitenoise = "^6.2.0"
 
 [tool.poetry.group.dev.dependencies]
-django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
+django-stubs = {extras = ["compatible-mypy"], version = "^5.0"}
 ipython = "^8.14.0"
-mypy = "^1.7.0"
-ruff = "^0.3.5"
+mypy = "^1.10.0"
+ruff = "^0.4.5"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
