--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,11 @@ python = "^3.10"
 
 # 3rd party
 django = "^5.0"
-fastapi = "^0.111.0"
+fastapi = "^0.114.2"
+orjson = "^3.10.7"
 pydantic = "^2.8.2"
 uvicorn = "^0.30.4"
-uvloop = {version = "^0.19.0", markers = 'sys_platform != "win32"'}
+uvloop = {version = "^0.20.0", markers = 'sys_platform != "win32"'}
 
 # optional
 psycopg2-binary = "^2.9.5"
@@ -27,7 +28,7 @@ whitenoise = "^6.7.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^5.0"}
 ipython = "^8.26.0"
 mypy = "^1.11.1"
-ruff = "^0.4.7"
+ruff = "^0.6.5"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
