--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,36 @@
-[tool.poetry]
-name = "fastapi-django"
-package-mode = false
-version = "0.1.0"
-
-# doc
+[project]
 authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
+
 description = "fastapi and django integration"
 license = "MIT"
+name = "fastapi-django"
+readme = "README.md"
+version = "0.1.0"
 
-[tool.poetry.dependencies]
-python = "^3.10"
+requires-python = ">=3.10"
 
-# 3rd party
-django = "^5.0"
-fastapi = "^0.115.4"
-orjson = "^3.10.7"
-pydantic = "^2.8.2"
-uvicorn = "^0.30.4"
-uvloop = {version = "^0.20.0", markers = 'sys_platform != "win32"'}
-
-# optional
-psycopg2-binary = "^2.9.5"
 # you don't need whitenoise if you mount the django APP with FastAPI
-whitenoise = "^6.7.0"
+dependencies = [
+  "django>=5.1.3",
+  "fastapi>=0.115.5",
+  "httptools>=0.6.4",
+  "orjson>=3.10.11",
+  "psycopg>=3.2.3", # for postgres
+  "pydantic>=2.9.2",
+  "uvicorn>=0.32.0",
+  "uvloop>=0.21.0; sys_platform != 'win32'",
+  "whitenoise>=6.8.2",
+]
 
-[tool.poetry.group.dev.dependencies]
-django-stubs = {extras = ["compatible-mypy"], version = "^5.0"}
-ipython = "^8.26.0"
-mypy = "^1.11.1"
-ruff = "^0.6.5"
+[dependency-groups]
+dev = [
+  "django-stubs[compatible-mypy]>=5.1.1",
+  "ipython>=8.29.0",
+  "ruff>=0.7.3",
+]
 
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
 
-[tool.isort]
-multi_line_output = 3
-profile = "black"
+[tool.django-stubs]
+django_settings_module = "mysite.settings"
